Fixed reactive database fetch methods.