@@ -1,14 +1,19 @@
 package core.services;
 
 import api.dto.*;
+import core.enums.ConditionType;
 import core.enums.UserType;
 import core.mappers.DTOMapper;
 import data.entities.Patient;
+import data.entities.Practitioner;
 import data.repositories.PatientRepository;
+import data.repositories.PractitionerRepository;
+import io.smallrye.mutiny.Uni;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.transaction.Transactional;
 
+import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -19,125 +24,96 @@ public class PatientService {
     @Inject
     PatientRepository patientRepository;
 
-    public List<PatientDTO> getAllPatients(int pageIndex, int pageSize, boolean eager) {
-        List<Patient> patients = eager
+    @Inject
+    PractitionerRepository practitionerRepository;
+
+    public Uni<List<PatientDTO>> getAllPatients(int pageIndex, int pageSize, boolean eager) {
+
+        Uni<List<Patient>> patients = eager
                 ? patientRepository.findAllPatientsWithRelations(pageIndex, pageSize)
                 : patientRepository.findAllPatients(pageIndex, pageSize);
-        return patients.stream()
+
+        return patients.map(ps -> ps.stream()
                 .map(p -> DTOMapper.toPatientDTO(p, eager))
-                .collect(Collectors.toList());
+                .toList());
     }
 
     /**
      * Get patient by ID, optionally fetch relations
      */
-    public PatientDTO getPatientById(UUID patientId, boolean eager) {
-        Patient patient = eager
+    public Uni<PatientDTO> getPatientById(UUID patientId, boolean eager) throws IllegalArgumentException {
+
+        Uni<Patient> patientUni = eager
                 ? patientRepository.findByIdWithRelations(patientId)
                 : patientRepository.findById(patientId);
 
-        if (patient == null) {
-            throw new IllegalArgumentException("Patient not found");
-        }
+        return patientUni
+                .onItem().ifNull().failWith(() -> new IllegalArgumentException("Patient not found"))
 
-        return DTOMapper.toPatientDTO(patient, eager);
+                .map(p -> DTOMapper.toPatientDTO(p, eager));
     }
+
 
     /**
      * Get patient by email
      */
-    public PatientDTO getPatientByEmail(String email, boolean eager) {
+    public Uni<PatientDTO> getPatientByEmail(String email, boolean eager) throws IllegalArgumentException {
         if (email == null || email.isEmpty()) {
-            throw new IllegalArgumentException("Email cannot be empty");
+            return Uni.createFrom().failure(new IllegalArgumentException("Email cannot be empty"));
         }
 
-        Patient patient = eager
+        Uni<Patient> patientUni = eager
                 ? patientRepository.findByEmailWithRelations(email)
                 : patientRepository.findByEmail(email);
 
-        if (patient == null) return null;
-
-        return DTOMapper.toPatientDTO(patient, eager);
+        return patientUni
+                .onItem().ifNull().failWith(() -> new IllegalArgumentException("Patient with matching email not found."))
+                .map(p -> DTOMapper.toPatientDTO(p, eager));
     }
 
     /**
      * Search patients by name (partial match)
      */
-    public List<PatientDTO> searchPatientsByName(String namePattern, int pageIndex, int pageSize, boolean eager) {
+    public Uni<List<PatientDTO>> searchPatientsByName(String namePattern, int pageIndex, int pageSize) throws IllegalArgumentException {
         if (namePattern == null || namePattern.isEmpty()) {
             throw new IllegalArgumentException("Search term cannot be empty");
         }
 
-        List<Patient> patients = eager
-                ? patientRepository.searchByNameWithRelations(namePattern, pageIndex, pageSize)
-                : patientRepository.searchByName(namePattern, pageIndex, pageSize);
+        Uni<List<Patient>> patients = patientRepository.searchByName(namePattern, pageIndex, pageSize);
 
-        return patients.stream()
-                .map(p -> DTOMapper.toPatientDTO(p, eager))
-                .collect(Collectors.toList());
+        return patients.map(ps -> ps.stream()
+                .map(p -> DTOMapper.toPatientDTO(p, false))
+                .toList());
     }
 
-
-    @Transactional
-    public PatientDTO createPatient(PatientCreateDTO dto) {
-        if (dto.fullName == null || dto.fullName.isEmpty()) {
-            throw new IllegalArgumentException("Full name is required");
-        }
-        if (dto.email == null || dto.email.isEmpty()) {
-            throw new IllegalArgumentException("Email is required");
-        }
-        if (dto.password == null || dto.password.isEmpty()) {
-            throw new IllegalArgumentException("Password is required");
-        }
-
-        Patient existing = patientRepository.findByEmail(dto.email);
-        if (existing != null) {
-            throw new IllegalArgumentException("User with same e-mail already exists");
-        }
-
-        Patient patient = new Patient();
-        patient.setFullName(dto.fullName);
-        patient.setEmail(dto.email);
-        patient.setPassword(hashPassword(dto.password));
-        patient.setUserType(UserType.Patient);
-
-        patientRepository.persist(patient);
-
-        return DTOMapper.toPatientDTO(patient, true);
+    public Uni<List<PatientDTO>> getPatientsByConditionType(ConditionType type) {
+        Uni<List<Patient>> patientsUni = patientRepository.getPatientsByConditionType(type);
+        return patientsUni.map(ps -> ps.stream()
+                .map(p -> DTOMapper.toPatientDTO(p, false)).toList());
     }
 
+    public Uni<List<PatientDTO>> getPatientsByPractitionerEncountersAndDate(UUID practitionerId, LocalDate searchDate) {
+        Uni<List<Patient>> patients = patientRepository.getPatientsByPractitionerEncountersAndDate(practitionerId, searchDate);
+        return patients.map(ps -> ps.stream()
+                .map(p -> DTOMapper.toPatientDTO(p, false)).toList());
+    }
 
-    @Transactional
-    public PatientDTO updatePatient(UUID patientId, PatientCreateDTO dto) {
-        Patient patient = patientRepository.findById(patientId);
-        if (patient == null) {
-            throw new IllegalArgumentException("Patient not found");
+    public Uni<List<PatientDTO>> getPatientsByPractitioner(UUID practitionerId) {
+        Uni<List<Patient>> patients = patientRepository.getPatientsByPractitioner(practitionerId);
+        return patients.map(ps -> ps.stream()
+                .map(p -> DTOMapper.toPatientDTO(p, false)).toList());
+    }
+
+    public Uni<PractitionerDTO> getPractitionerByEmail(String email) throws IllegalArgumentException {
+        if (email == null || email.isEmpty()) {
+            return Uni.createFrom().failure(new IllegalArgumentException("Email cannot be empty"));
         }
 
-        if (dto.fullName != null && !dto.fullName.isEmpty()) {
-            patient.setFullName(dto.fullName);
-        }
-        if (dto.password != null && !dto.password.isEmpty()) {
-            patient.setPassword(hashPassword(dto.password));
-        }
+        Uni<Practitioner> practitionerUni = practitionerRepository.findByEmailOnlyIfDoctor(email);
 
-        patientRepository.persist(patient);
-        return DTOMapper.toPatientDTO(patient, true);
+        return practitionerUni
+                .onItem().ifNull().failWith(() -> new IllegalArgumentException("Practitioner with matching email not found."))
+                .map(p -> DTOMapper.toPractitionerDTO(p, false));
     }
 
-
-    @Transactional
-    public boolean deletePatient(UUID patientId) {
-        return patientRepository.deleteById(patientId);
-    }
-
-
-    public long countPatients() {
-        return patientRepository.count();
-    }
-
-
-    private String hashPassword(String password) {
-        return password; // TODO: implement proper password hashing
-    }
 }
